# hephaestus

./: Cargo.toml  README.md  hep.rdbg
examples/: assembly.hep  bytecode.hep  calc.hep  calc.jai  compiler_design.hep  contexts.hep  directives.hep  file_loading.hep  hello.asm  hello1.asm  hello_world.hep  hello_world1.hep  invalid.hep  link-cmd.txt  operator_precedence.hep  preloads.hep  scoping.hep  strings.hep  todo.hep  todo.jai  useful.hep
src/: abstract_syntax.rs  acting.rs  arguments.rs  collections.rs  compilation.rs  directives.rs  enclosures.rs  errors.rs  file_system.rs  keywords.rs  lib.rs  literals.rs  main.rs  operators.rs  source_files.rs  strings.rs  terminators.rs  testing.rs  threading.rs  tokenisation.rs  types.rs  utilities.rs
src/backends/: errors.rs  mod.rs
src/bytecode/: mod.rs
src/compilation/: backends.rs  compiler.rs  errors.rs  intermediate_representation.rs  mod.rs  parsing.rs  sizing.rs  statistics.rs  typing.rs
src/intermediate_representation/: assembler.rs  builder.rs  constants.rs  errors.rs  mod.rs  strings.rs
src/parsing/: mod.rs  source_files.rs
src/running/: byte_code_runner.rs  interpreter.rs  mod.rs  virtual_machine.rs
src/sizing/: mod.rs
src/testing/: acting.rs  backends.rs  compilation.rs  file_system.rs  mod.rs  parsing.rs  typing.rs
src/tests/: acting.rs  backends.rs  compilation.rs  file_system.rs  lexical.rs  mod.rs  parsing.rs  running.rs
src/types/: built_in.rs  mod.rs  resolvable.rs  runtime.rs  size.rs
src/typing/: inference.rs  mod.rs  repository.rs
tests/: mod.rs
tests/lexical/: characters.rs  (+1 more)
(+123 files in other folders)
