[package]
name = "rust-hephaestus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "*"

[dependencies.uuid]
 version = "1.1.2"
 features = [
     "v4",
     "fast-rng"
 ]